<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Conquest</string>
    <string name="optionsActionBarName">Logged in as</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Sign up for free</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name_label">Username</string>
    <string name="name_label">Name</string>
    <string name="last_name_label">Last name</string>
    <string name="password_label">Password</string>
    <string name="email_label">E-mail</string>
    <string name="birth_date">Date of birth</string>
    <string name="title_activity_map">Map</string>
    <string name="progress_logging_title">Logging in...</string>
    <string name="progress_logging_message">Please wait!</string>
    <string name="error_title">Error!</string>
    <string name="error_message">You have empty fields!</string>
    <string name="log_out">Log out</string>
    <string name="play_button">Start</string>
    <string name="highScoresButton">High scores</string>
    <string name="game_settings">Game settings</string>
    <string name="player_settings">Profile settings</string>
    <string name="title_activity_alliance">Alliances:</string>
    <string name="make_alliance">Make new alliance</string>
    <string name="alliances_button">Alliances</string>
    <string name="error_bluetooth_message">Device does not support Bluetooth!</string>
    <string name="bluetooth_dialog">Available devices:</string>
    <string name="bluetooth_dialog_done_label">Done</string>
    <string name="bluetooth_enable_action">Enable Bluetooth</string>
    <string name="bluetooth_discovery_error">No discovered bluetooth devices!</string>
    <string name="progress_signing_up_title">Signing up...</string>
    <string name="progress_wait_message">Please Wait!</string>
    <string name="progress_editing_title">Editing profile...</string>
    <string name="building_dialog">Do you want to build a fortress?</string>
    <string name="building_dialog_yes_button">Yes</string>
    <string name="building_dialog_no_button">No</string>
    <string name="adding_ally">Adding new ally!</string>
    <string name="deleting_ally">Deleting ally!</string>
    <string name="confirm_title">Confirm</string>
    <string name="confirm_message_delete">Are you sure you want to delete?</string>
    <string name="title_activity_bonus">BonusActivity</string>
    <string name="date_picker_label_from">Date from:</string>
    <string name="date_picker_label_to">Date to:</string>
    <string name="time_picker_label_from">Time from:</string>
    <string name="time_picker_label_to">Time to:</string>
    <string name="bonus_info">Bonus information</string>
    <string name="click_pick">Click to pick</string>
    <string name="database_button">Get result!</string>
    <string name="write_text">Write message here..</string>
    <string name="send_text">Send</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="detach">Detach</string>
</resources>
