<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/building_layout"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:layout_gravity="center">
    <TextView
        android:text="@string/building_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/building_yes"
        android:text="@string/building_dialog_yes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/building_no"
        android:text="@string/building_dialog_no_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>