<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.mnm.conquest.RegisterActivity"
        android:background="#ffffff"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginBottom="15dip">
            <ImageView
                android:id="@+id/image"
                android:layout_width="150dip"
                android:layout_height="150dip"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@mipmap/player_default"
                android:paddingEnd="0dp"
                android:paddingStart="0dp"
                android:paddingBottom="0dp" />
           <ViewFlipper
               android:id="@+id/marker_flipper"
               android:layout_width="150dip"
               android:layout_height="150dip">

           </ViewFlipper>
            </LinearLayout>


            <EditText
                android:id="@+id/name_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/name_label"
                android:textColorHint="#bbbbbb"/>
            <EditText
                android:id="@+id/last_name_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/last_name_label"
                android:textColorHint="#bbbbbb"/>
            <EditText
                android:id="@+id/username_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/user_name_label"
                android:textColorHint="#bbbbbb" />
            <EditText
                android:id="@+id/password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/password_label"
                android:textColorHint="#bbbbbb"
                android:password="true"/>
            <EditText
                android:id="@+id/email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/email_label"
                android:textColorHint="#bbbbbb"/>
            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sign_up"/>
        </LinearLayout>



    </RelativeLayout>
</ScrollView>