<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
                android:id="@+id/bonus_activity_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.mnm.conquest.BonusActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.mnm.conquest.FTextView
            android:layout_width="wrap_content"
           android:layout_height="wrap_content"

              android:text="@string/date_picker_label_from"/>
         <com.mnm.conquest.FEditText
             android:id="@+id/date_picker_from"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="none"
             android:clickable="true"
             android:gravity="right"
             android:focusable="false"
             android:hint="@string/click_pick"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.mnm.conquest.FTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_picker_label_to"
            />
        <com.mnm.conquest.FEditText
            android:id="@+id/date_picker_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:clickable="true"
            android:gravity="right"
            android:focusable="false"
            android:hint="@string/click_pick"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.mnm.conquest.FTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_picker_label_from"
            />
        <com.mnm.conquest.FEditText
            android:id="@+id/time_picker_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:clickable="true"
            android:focusable="false"
            android:gravity="right"
            android:hint="@string/click_pick"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.mnm.conquest.FTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_picker_label_to"
        />
        <com.mnm.conquest.FEditText
            android:id="@+id/time_picker_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:clickable="true"
            android:focusable="false"
            android:gravity="right"
            android:hint="@string/click_pick"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/checkbox_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        </LinearLayout>
    <com.mnm.conquest.FButton
        android:id="@+id/get_result_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/database_button"/>
</LinearLayout>
    </ScrollView>